--- a/recipemaker-ingress.yaml
+++ b/recipemaker-ingress.yaml
@@ -1,16 +1,3 @@
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: recipemaker-ingress
-# spec:
-#   defaultBackend:
-#     service:
-#       name: recipemaker-app
-#       port:
-#         number: 3000
-
-
-
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -19,20 +6,13 @@ metadata:
     kubernetes.io/ingress.class: "gce"
     networking.gke.io/managed-certificates: "backendproject"
     kubernetes.io/ingress.global-static-ip-name: "34.69.196.76"
+    nginx.ingress.kubernetes.io/proxy-timeout: "60" 
 spec:
   defaultBackend:
     service:
       name: recipemaker-app
       port:
         number: 3000
-  # rules:
-  # - host: "mywebsite.com"
-  #   http:
-  #     paths:
-  #     - pathType: Prefix
-  #       path: "/"
-  #       backend:
-  #         service:
-  #           name: my-service
-  #           port:
-  #             number: 80
+      
+
+  
